# tuoke-agent

./: .gitignore  GITHUB-UPLOAD-GUIDE.md  PRD.md  README.md
docs/: 01-industry-research.md  02-tech-stack-research.md  02b-openclaw-integration.md  04-feature-design.md  07-deployment.md  PRD.md  architecture.md  challenge-solutions.md  dev-breakdown-silicon-valley.md  evaluation-2026-04-02.md  implementation-roadmap.md  prd-review-silicon-valley.md  product-architecture.md  prototype-v2.html  prototype.html  task-list.md  tech-feasibility-silicon-valley.md  ux-review-prototype-v2.md  项目梳理-原型图-卡点-流程图.md
docs/design/: 03-system-architecture.md  05-data-pipeline.md  06-ai-integration.md  06b-llm-cases.md  07b-dev-plan.md  08-final-report.md
docs/research/: customer-acquisition-learning.md
lead-gen-automation/: customer-acquisition-learning.md  lead-gen-final-summary.md  lead-gen-research.md
lead-gen-automation/docs/: customer-acquisition-report.md
src/backend/: pyproject.toml
src/backend/app/: main.py
src/backend/app/routers/: health.py  prospects.py
src/backend/app/schemas/: common.py  prospects.py
src/backend/app/services/: prospect_service.py
src/backend/tests/: test_backend_dependencies.py  test_collect_api.py  test_collect_schema.py  test_common_schema.py  test_health.py  test_prospect_service.py
src/backend/tests/fixtures/: prospects_enterprise_100.csv
src/backend/tuoke_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/frontend/: package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
(+13 files in other folders)
