[project]
name = "tuoke-agent-backend"
version = "0.1.0"
description = "Backend service for Tuoke Agent lead report MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.109,<1.0",
  "uvicorn>=0.27,<1.0",
  "pydantic>=2.6,<3.0",
  "python-multipart>=0.0.9,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "httpx>=0.27,<1.0",
  "pytest-cov>=5.0,<6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing:skip-covered --cov-fail-under=80"
